--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
 
 .navbar {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   background-color: #212529;
   color: white;
   padding: 25px 60px;
