--- a/style.css
+++ b/style.css
@@ -26,3 +26,9 @@ body {
   padding: 5px;
   border-radius: 4px;
 }
+
+.cartAmount {
+  font-size: 16px;
+  background-color: red;
+  color: white;
+}
