added cart quantity styles

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 .cart {
+  position: relative;
   background-color: #fff;
   color: #212529;
   font-size: 30px;
@@ -28,7 +29,12 @@ body {
 }
 
 .cartAmount {
+  position: absolute;
+  top: -15px;
+  right: -10px;
   font-size: 16px;
   background-color: red;
   color: white;
+  padding: 3px;
+  border-radius: 3px;
 }
