--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ body {
   padding: 10px;
   gap: 10px;
 }
+
+.price-quantity {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
