--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ body {
   gap: 20px;
 }
 
+@media (max-width: 1000px) {
+  .shop {
+    grid-template-columns: repeat(2, 223px);
+  }
+}
+
 .item {
   border: 2px solid #212529;
   border-radius: 4px;
